tests/baselines/reference/invokingNonGenericMethodWithTypeArguments2.errors.txt
invokingNonGenericMethodWithTypeArguments2.ts(5,9): error TS2347: Untyped function calls may not accept type arguments.


==== invokingNonGenericMethodWithTypeArguments2.ts (1 errors) ====
    class Foo {
        private foo: any;
    
        constructor() {
            this.foo<string>();
            ~~~~~~~~~~~~~~~~~~
!!! error TS2347: Untyped function calls may not accept type arguments.
        }
    }
    